[project]
name = "sublime_lib"
version = "1.6.0"
description = "Utility library for frequently used functionality in Sublime Text"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "FichteFoll"}, {name = "Thom1729"}]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.3"

[build-system]
requires = ["hatchling>=1.20", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.*",
    "/stubs",
    "*.lock",
]

[tool.coverage.run]
omit = [
    "*/_compat/*",
    "*/tests/*",
    "*/vendor/*",
]

[tool.coverage.report]
show_missing = true
