[project]
name = "sublime_lib"
version = "1.6.0"
description = "Utility library for frequently used functionality in Sublime Text"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "FichteFoll"}, {name = "Thom1729"}]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.3"

[build-system]
requires = ["hatchling>=1.20", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "flake8>=3.9.2",
    "mypy>=0.720",
    "pydocstyle>=4.0.0",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.*",
    "/stubs",
    "*.lock",
]

[tool.coverage.run]
omit = [
    "*/tests/*",
]

[tool.coverage.report]
show_missing = true

[tool.pydocstyle]
match_dir = "^(?!_)"
match = "^(?!_).*\\.py"
